// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label has correct default options 1`] = `
<label
  className="grommetux-label grommetux-label--margin-medium grommetux-label--medium"
  data-flavor="coconut"
  htmlFor={undefined}
>
  Testing
</label>
`;

exports[`Label has correct size="small" and margin="large" rendering 1`] = `
<label
  className="grommetux-label grommetux-label--margin-large grommetux-label--small"
  htmlFor={undefined}
>
  Testing
</label>
`;

exports[`Label has correct uppercase=true rendering 1`] = `
<label
  className="grommetux-label grommetux-label--uppercase grommetux-label--margin-medium grommetux-label--medium"
  htmlFor={undefined}
>
  Testing
</label>
`;
